2011-01-19  Doug Simons  <doug.simons@testplant.com>

	* Source/NSSearchFieldCell.m
	(-_openPopup:): Switch to use an actual NSPopUpButtonCell when
	popping up the menu. Handle selected item in search menu properly.
	(-_searchForRecent:): Display and select search text after user 
	selects a recent search term.
	(-drawWithFrame:inView:, -textDidChange:, -clearSearch:): Only show
	cancel button when field is not empty.

2011-01-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSApplication.m (-sendEvent:):
	* Source/NSMenu.m (-performKeyEquivalent:):
	Look up key equivalents in the Services menu only after traversing
	the rest of the main menu to avoid accidentally shadowing key
	equivalents in the application's own menus.

2011-01-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* ColorPickers/GSWheelColorPicker.m (-regenerateImage):
	Fix to correctly display color wheel image on big endian
	machines.

2011-01-16 00:32-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSApplication.m: Added overide for orderWindow:relativeTo:
	in NSIconWindow.  Check for GSSuppressAppIcon and order the window
	ONLY if the app icon window is supposed to be displayed, otherwise
	do not do anything with it.   I observed issues with this
	functionality while testing the GNOME theme the app icon would 
	periodically show even when the default mentioned above was set to 
	YES.

2011-01-15 23:50-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSMenuView.m: Fix to previous change to 
	[NSMenuView trackWithEvent:].  
	Assign attachedMenu to local variable and test for nil
	prior to entering the code to close the menu when tracking
	the mouse for normal menus.  Previous version of this code 
	was causing menu items owned by pull downs (NSPopUpButton) to 
	close prior to mouse up event.

2011-01-15 German Arias <german@xelalug.org>

	* Source/NSWindow.m:
	* Source/NSSavePanel.m:	Reverted latest changes.