@@ -1,3 +1,9 @@
+2011-01-20  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSWorkspace.m: check on-disk cache at regular intervals ...
+	somehow that got lost at some point.  Also tidy up a few coding
+	standards violations which crept in.
+
 2011-01-19  Doug Simons  <doug.simons@testplant.com>
 
 	* Source/NSSearchFieldCell.m
